[gd_scene format=3 uid="uid://bukkanr4pda5r"]

[ext_resource type="Script" uid="uid://u6ohuq2jta42" path="res://modules/card_game/card/card.gd" id="1_wo8ig"]
[ext_resource type="Resource" uid="uid://dalau4f1em4ht" path="res://modules/cards/data/single_attack.tres" id="2_si1j2"]
[ext_resource type="PackedScene" uid="uid://dbc26mu03jyca" path="res://modules/card_game/card/card_vfx.tscn" id="3_ryk8o"]

[node name="Card" type="Control" unique_id=39510458]
custom_minimum_size = Vector2(375, 562.5)
layout_mode = 3
anchors_preset = 0
offset_left = -187.5
offset_top = -281.25
offset_right = 187.5
offset_bottom = 281.25
pivot_offset_ratio = Vector2(0.5, 0.5)
script = ExtResource("1_wo8ig")
_data = ExtResource("2_si1j2")

[node name="CardVfx" parent="." unique_id=646182243 instance=ExtResource("3_ryk8o")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
